--- a/public/index.html
+++ b/public/index.html
@@ -98,6 +98,91 @@
                 were not yet over; nevertheless all the gods had now begun to pity him except Neptune, who still persecuted
                 him without ceasing and would not let him get home.
             </p>
+            <h1>Homer: The Odyssey</h1>
+            <p>
+                <strong>Tell me, O muse,</strong> of that ingenious hero who travelled far and wide after he had sacked
+                the famous town of Troy. Many cities did he visit, and many were the nations with whose manners and customs
+                he was acquainted; moreover he suffered much by sea while trying to save his own life and bring his men safely
+                home; but do what he might he could not save his men, for they perished through their own sheer folly in eating
+                the cattle of the Sun-god Hyperion; so the god prevented them from ever reaching home. Tell me, too, about all
+                these things, O daughter of Jove, from whatsoever source you may know them.
+            </p>
+            <p>
+                <strong>So now all who escaped death in battle</strong> or by shipwreck had got safely home except Ulysses,
+                and he, though he was longing to return to his wife and country, was detained by the goddess Calypso, who
+                had got him into a large cave and wanted to marry him. But as years went by, there came a time when the gods
+                settled that he should go back to Ithaca; even then, however, when he was among his own people, his troubles
+                were not yet over; nevertheless all the gods had now begun to pity him except Neptune, who still persecuted
+                him without ceasing and would not let him get home.
+            </p>
+            <h1>Homer: The Odyssey</h1>
+            <p>
+                <strong>Tell me, O muse,</strong> of that ingenious hero who travelled far and wide after he had sacked
+                the famous town of Troy. Many cities did he visit, and many were the nations with whose manners and customs
+                he was acquainted; moreover he suffered much by sea while trying to save his own life and bring his men safely
+                home; but do what he might he could not save his men, for they perished through their own sheer folly in eating
+                the cattle of the Sun-god Hyperion; so the god prevented them from ever reaching home. Tell me, too, about all
+                these things, O daughter of Jove, from whatsoever source you may know them.
+            </p>
+            <p>
+                <strong>So now all who escaped death in battle</strong> or by shipwreck had got safely home except Ulysses,
+                and he, though he was longing to return to his wife and country, was detained by the goddess Calypso, who
+                had got him into a large cave and wanted to marry him. But as years went by, there came a time when the gods
+                settled that he should go back to Ithaca; even then, however, when he was among his own people, his troubles
+                were not yet over; nevertheless all the gods had now begun to pity him except Neptune, who still persecuted
+                him without ceasing and would not let him get home.
+            </p>
+            <h1>Homer: The Odyssey</h1>
+            <p>
+                <strong>Tell me, O muse,</strong> of that ingenious hero who travelled far and wide after he had sacked
+                the famous town of Troy. Many cities did he visit, and many were the nations with whose manners and customs
+                he was acquainted; moreover he suffered much by sea while trying to save his own life and bring his men safely
+                home; but do what he might he could not save his men, for they perished through their own sheer folly in eating
+                the cattle of the Sun-god Hyperion; so the god prevented them from ever reaching home. Tell me, too, about all
+                these things, O daughter of Jove, from whatsoever source you may know them.
+            </p>
+            <p>
+                <strong>So now all who escaped death in battle</strong> or by shipwreck had got safely home except Ulysses,
+                and he, though he was longing to return to his wife and country, was detained by the goddess Calypso, who
+                had got him into a large cave and wanted to marry him. But as years went by, there came a time when the gods
+                settled that he should go back to Ithaca; even then, however, when he was among his own people, his troubles
+                were not yet over; nevertheless all the gods had now begun to pity him except Neptune, who still persecuted
+                him without ceasing and would not let him get home.
+            </p>
+            <h1>Homer: The Odyssey</h1>
+            <p>
+                <strong>Tell me, O muse,</strong> of that ingenious hero who travelled far and wide after he had sacked
+                the famous town of Troy. Many cities did he visit, and many were the nations with whose manners and customs
+                he was acquainted; moreover he suffered much by sea while trying to save his own life and bring his men safely
+                home; but do what he might he could not save his men, for they perished through their own sheer folly in eating
+                the cattle of the Sun-god Hyperion; so the god prevented them from ever reaching home. Tell me, too, about all
+                these things, O daughter of Jove, from whatsoever source you may know them.
+            </p>
+            <p>
+                <strong>So now all who escaped death in battle</strong> or by shipwreck had got safely home except Ulysses,
+                and he, though he was longing to return to his wife and country, was detained by the goddess Calypso, who
+                had got him into a large cave and wanted to marry him. But as years went by, there came a time when the gods
+                settled that he should go back to Ithaca; even then, however, when he was among his own people, his troubles
+                were not yet over; nevertheless all the gods had now begun to pity him except Neptune, who still persecuted
+                him without ceasing and would not let him get home.
+            </p>
+            <h1>Homer: The Odyssey</h1>
+            <p>
+                <strong>Tell me, O muse,</strong> of that ingenious hero who travelled far and wide after he had sacked
+                the famous town of Troy. Many cities did he visit, and many were the nations with whose manners and customs
+                he was acquainted; moreover he suffered much by sea while trying to save his own life and bring his men safely
+                home; but do what he might he could not save his men, for they perished through their own sheer folly in eating
+                the cattle of the Sun-god Hyperion; so the god prevented them from ever reaching home. Tell me, too, about all
+                these things, O daughter of Jove, from whatsoever source you may know them.
+            </p>
+            <p>
+                <strong>So now all who escaped death in battle</strong> or by shipwreck had got safely home except Ulysses,
+                and he, though he was longing to return to his wife and country, was detained by the goddess Calypso, who
+                had got him into a large cave and wanted to marry him. But as years went by, there came a time when the gods
+                settled that he should go back to Ithaca; even then, however, when he was among his own people, his troubles
+                were not yet over; nevertheless all the gods had now begun to pity him except Neptune, who still persecuted
+                him without ceasing and would not let him get home.
+            </p>
         </div>
     </div>
     <script type="text/javascript">
@@ -129,11 +214,18 @@
             obj.className = (annotation.bodies.length > 1) ? "" : "";
             obj.style = false;
             const comment = (annotation.bodies.filter(b => b.type === 'TextualBody' && b.purpose === 'commenting'))
+            const style = (annotation.bodies.filter(b => b.type === 'TextualBody' && b.purpose === 'highlighting'))
             
             if (comment.length) {
                 obj.comment = comment[0].value;
             } else {
                 obj.comment = null;
+            }
+
+            if (style.length) {
+                obj.style = "background-color: " + style[0].value;
+            } else {
+                obj.style = null;
             }
 
             return obj;
@@ -143,12 +235,15 @@
             content: 'content', // Element id or DOM node to attach to
             locale: 'fi',
             formatter: formatter,
+            readOnly:true,
             widgets: [
                 { widget: 'COMMENT' },
                 { widget: 'TAG', vocabulary: ['Place', 'Person', 'Event', 'Organization', 'Animal'] }
             ],
             relationVocabulary: ['isRelated', 'isPartOf', 'isSameAs ']
         });
+
+        alert(1);
 
         r.loadAnnotations('annotations.w3c.json');
 
